read in complete

--- a/reports/Report01.tex
+++ b/reports/Report01.tex
@@ -65,9 +65,9 @@ Sensor
 %almost a year
 
 \subsection{Quantisation}
-The data spans the time between July 2014 to February 2015, with a total of 727 days.
+The data spans the time between July 2014 to February 2015, with a total of 242 days.
 
-\subsubsection{Weather data}
+\paragraph{Weather data:}
 The regional weather is from the official recordings of the "Deutsche Wetterdienst" (german weather service) and contains:
 
 \begin{itemize}
@@ -78,7 +78,7 @@ The regional weather is from the official recordings of the "Deutsche Wetterdien
 
 One set of value is recorded every hour.
 
-\subsubsection{Sensor data}
+\paragraph{Sensor data:}
 The Measurements from the systems are:
 
 \begin{itemize}
@@ -86,12 +86,16 @@ The Measurements from the systems are:
 \item Rate of heat flow in watts
 \item supply temperature in $^\circ C$
 \item return temperature $^\circ C$
-\item Energy in $Nm$
 \end{itemize}
 
 The sensors are read once every minute, with a total of 1440 measurements a day. In addition, the energy is calculated per hour.\\
 
-That makes a total of 4,239,864 measurements.
+\paragraph{Accumulated data:}
+The Energy in $Nm$ in calculated per day.\\
+
+\noindent
+That makes a total of 1,411,586 measurements at 348,480 dates.\\
+The actual dataset however contains 1,371,050 data points at only 344,160 measure points.
 
 
 %CONTENTS
