--- a/reports/sample_assignment.tex
+++ b/reports/sample_assignment.tex
@@ -124,7 +124,7 @@ Where the assignment abstract began as a general summary of the topic, which you
 We want to make this course as applicable and useful as possible, and this can only be done with useful and continuous feedback. We are actively investigating the best tools for teaching machine learning. 
 
 \section*{Sources}
-Sources are expected. If you follow a tutorial online, used a stack overflow answer or github repo then list it here. Getting caught will result in trouble.
+Sources are expected. If you follow a tutorial online, used a stack overflow answer or github repository then list it here. Getting caught will result in trouble.
 \blindenumerate[3]
 
 \newpage
@@ -155,7 +155,7 @@ Your results should be written in your assignment answers Images, Figures etc. s
 
 \begin{figure}[h]
   \centering
-  \caption{A decision tree of zoo animals \\ Include the filename, and try to pick readable graphics}
+  \caption{A decision tree of zoo animals \\ Include the file name, and try to pick readable graphics}
   \includegraphics[width=1\textwidth]{./data/q_1_c}
 \end{figure}
 
