tex requirements added

--- a/reports/visualisation.tex
+++ b/reports/visualisation.tex
@@ -57,6 +57,11 @@
 
 \maketitle
 
+%TODO: add abstract and conclusion
+%labels (or zero)
+%references (or zero)
+%remove scaffolding code
+
 \section{Data visualisation}
 \subsection{Data description}
 The data comes from two main sources:
