--- a/reports/proposal.tex
+++ b/reports/proposal.tex
@@ -88,6 +88,7 @@
 \postauthor{\footnotesize \usefont{OT1}{phv}{m}{sl} \color{Black} 
 BRS University of Applied Sciences % Institution of author
 \\email: cuignon@gmail.com ~github: @ChrisQuignon
+\\email: daiem.dna@gmail.com ~github: @DaiemNA
 \par\end{flushleft}\HorRule}
 
 \date{\today} 
